Bessere Artikelliste, Bild und Textsupport, Fehlerbehebungen
