# server/internal/bom/bom.go
@@ -2,73 +2,151 @@ package bom
 
 import (
 	"fmt"
+	"log"
 	"os"
 	"path/filepath"
-	"strings"
+	"slices"
+	"sync"
 
 	"musenova.de/filefinder/internal/config"
 	fshelper "musenova.de/filefinder/internal/fs-helper"
 	"musenova.de/filefinder/internal/gen"
 )
 
-func GetBom(config config.AppConfig, number string) (gen.BOM, error) {
-	path, err := fshelper.GetFilePath(config, number)
+type entry struct {
+	Index    string
+	Number   string
+	Name     string
+	Children []entry
+}
+
+type safeKnownArticles struct {
+	sync.RWMutex
+	m map[string]gen.Bom
+}
+
+func (s *safeKnownArticles) Store(key string, value gen.Bom) {
+	s.Lock()
+	defer s.Unlock()
+	s.m[key] = value
+}
+
+func (s *safeKnownArticles) Load(key string) (gen.Bom, bool) {
+	s.RLock()
+	defer s.RUnlock()
+	val, ok := s.m[key]
+	return val, ok
+}
+
+func getEntry(config config.AppConfig, number string) ([]entry, error) {
+	path, err := fshelper.GetFilePathWithSubstring(config, number, config.STLFolder)
 	if err != nil {
-		return gen.BOM{}, err
+		return nil, err
 	}
-	path = filepath.Join(path, config.STLFolder)
 
 	files, err := os.ReadDir(path)
 	if err != nil {
-		return gen.BOM{}, err
+		return nil, err
 	}
-	materials := make([]gen.Material, 0)
-
+	result := make([]entry, 0)
 	for _, fi := range files {
 		if fi.IsDir() || filepath.Ext(fi.Name()) != ".txt" {
 			continue
 		}
 
 		fshelper.ReadCsv(filepath.Join(path, fi.Name()), func(s []string) {
-			name := s[3]
-			number := s[1]
-			materials = append(materials, gen.Material{
-				Name:   &name,
-				Number: &number,
+			result = append(result, entry{
+				Index:  s[0],
+				Name:   s[3],
+				Number: s[1],
 			})
 		})
-		return gen.BOM{
-			Materials: &materials,
-			Name:      &number,
-		}, nil
+		return result, nil
 
 	}
-	return gen.BOM{}, fmt.Errorf("no stl file found for article %v", number)
+	return nil, fmt.Errorf("no stl file found for article %v", number)
 }
 
-func GetFullBom(config config.AppConfig, number string) (gen.FullBom, error) {
-	root, err := GetBom(config, number)
+func getBomRecursive(config config.AppConfig, current entry, knownArticles *safeKnownArticles, parents []string) (gen.Bom, error) {
+	if slices.Contains(parents, current.Number) {
+		errorName := "Artikel ist in sich selbst verschachtelt"
+		return gen.Bom{
+			Number: &current.Number,
+			Name:   &errorName,
+		}, nil
+	}
+
+	if bom, exists := knownArticles.Load(current.Number); exists {
+		return bom, nil
+	}
+
+	children, err := getEntry(config, current.Number)
 	if err != nil {
-		if !strings.Contains(err.Error(), "no stl file found") {
-			return gen.FullBom{}, err
+		converted := gen.Bom{
+			Index:  &current.Index,
+			Number: &current.Number,
+			Name:   &current.Name,
 		}
-		return gen.FullBom{}, nil
+		knownArticles.Store(current.Number, converted)
+		return converted, nil
 	}
 
-	children := make([]gen.FullBom, len(*root.Materials))
-	for i, material := range *root.Materials {
-		current := gen.FullBom{}
-		current.Number = material.Number
-		current.Name = material.Name
-		fullBom, err := GetFullBom(config, *material.Number)
-		if err == nil {
-			current.Children = fullBom.Children
-		}
-
-		children[i] = current
+	var wg sync.WaitGroup
+	childrenList := make([]gen.Bom, len(children))
+	errChan := make(chan error, len(children))
+	for i, child := range children {
+		wg.Add(1)
+		go func(idx int, c entry) {
+			defer wg.Done()
+			childBom, err := getBomRecursive(config, c, knownArticles, append(parents, current.Number))
+			if err != nil {
+				errChan <- err
+				return
+			}
+			childrenList[idx] = childBom
+		}(i, child)
 	}
-	return gen.FullBom{
-		Number:   &number,
-		Children: &children,
-	}, nil
+
+	// Wait for all goroutines to complete
+	wg.Wait()
+	close(errChan)
+
+	// Check for errors
+	if len(errChan) > 0 {
+		log.Println(<-errChan)
+		converted := gen.Bom{
+			Index:  &current.Index,
+			Number: &current.Number,
+			Name:   &current.Name,
+		}
+		knownArticles.Store(current.Number, converted)
+		return converted, nil
+	}
+
+	converted := gen.Bom{
+		Index:    &current.Index,
+		Number:   &current.Number,
+		Name:     &current.Name,
+		Children: &childrenList,
+	}
+	knownArticles.Store(current.Number, converted)
+	return converted, nil
+}
+
+func GetBom(config config.AppConfig, number string) (gen.Bom, error) {
+	root := entry{
+		Number: number,
+	}
+	knownArticles := &safeKnownArticles{
+		m: make(map[string]gen.Bom),
+	}
+	parent := make([]string, 0)
+
+	result, err := getBomRecursive(config, root, knownArticles, parent)
+	if err != nil {
+		return gen.Bom{}, err
+	}
+
+	return result, nil
+
 }
